cambios prework at platzi

--- a/pruebah.html
+++ b/pruebah.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Plastic Hearts</title>
+    <title>curso de prework at platzi</title>
 </head>
 <body>
-    <p>Sometimes I feel</p>
+    <p>welcome to github</p>
 </body>
 </html>
